<!--
  ~ Copyright (C) 2015-present, Ant Financial Services Group
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ 	http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->
<resources>
    <string name="app_name">SoloPi</string>
    <string name="permission_default">Check Permissions</string>
    <string name="scheme_app_desc">Automation Testing Tools</string>
    <string name="android_version_error">Android api %d is required, current: %d</string>
    <string name="request_dynamic_permission">SoloPi require permissions: \'%s\', total %d, please allow</string>
    <string name="record_screen_permission">SoloPi require screen record permission, please permit</string>
    <string name="record_screen_android_version_error">Screen record require Android API 21+, current: %d</string>
    <string name="accessibility_permission">SoloPi require accessibility service, click \'OK\' to grant.(If accessibility is on, please close and reopen it.)\n<![CDATA[<b style=\'color:red\'>If reopen accessibility not work, please force-stop SoloPi and restart.</b>]]></string>
    <string name="adb_permission"><![CDATA[SoloPi require wireless ADB, please execute \'adb tcpip 5555\' in terminal.\n<b style=\'color:red\'>Mind your data security, wireless adb may lead to data leaking.</b>]]></string>
    <string name="root_permission">SoloPi require root, please grant root permission first.</string>
    <string name="float_permission">SoloPi require float window permission, click \'OK\' to grant.</string>
    <string name="permission_list_error">Permission Request Error</string>
    <string name="device_usage_permission">SoloPi require usage access, click \'OK\' to grant.</string>
    <string name="adb_open_advice">Please click \'allow\' button if adb connection dialog shown.</string>
    <string name="open_adb_permission_failed">Wireless ADB connect failed, please execute \'adb tcpip 5555\' in terminal and retry.</string>
    <string name="constant__start_execution">Start</string>
    <string name="cmd__adb_break">Wireless ADB disconnect, please execute \'adb tcpip 5555\' in terminal and retry.</string>
    <string name="constant__sure">Yes</string>
    <string name="constant__cancel">Cancel</string>
    <string name="constant__global">Global</string>
    <string name="constant__app">App</string>
    <string name="constant__confirm">OK</string>
    <string name="permission__request_permission">Permission(</string>
    <string name="constant__no_inform">Ignore</string>
    <string name="file_choose__create_folder">New Folder</string>
    <string name="device_info__to_string">Device: %s\nBrand: %s\nManufacturer: %s\nProduct: %s\nVersion: %s\nAPI: %d\nSN: %s\nScreen Size: %s\nDisplay Size: %s\nScreen Density: %s\nScreen DPI: %d\nIP: %s\nMAC: %s\nRAM: %dGB\nCPU ABI: %s</string>
    <string name="permission__i_grant">Granted</string>
    <string name="permission__no_float_permission">No Float Window Permission</string>
    <string name="permission__i_know">I Know</string>
    <string name="permission__valid_fail">Check Failed</string>
    <string name="permission__no_record_info">No Record Info</string>
    <string name="permission__splash">/</string>
    <string name="permission__right_parentheses">)</string>
    <string name="file_choose__select_dir">Select Folder</string>
    <string name="permission__open_background_permission">Please grant \"Display pop-up window\" permission in MIUI</string>
    <string name="permission__ignore_battery_optimization_permission">Please grant \"Ignore battery optimization\" permission</string>
    <string name="permission__go_to_open">Go to Grant</string>
    <string name="permission__opened">Granted</string>
    <string name="permission__read_calendar">Read Calendar</string>
    <string name="permission__write_calendar">Write Calendar</string>
    <string name="permission__camera">Camera</string>
    <string name="permission__read_contacts">Read Contacts</string>
    <string name="permission__write_contacts">Write Contacts</string>
    <string name="permission__get_accounts">Get Accounts</string>
    <string name="permission__access_fine_location">Access Find Location</string>
    <string name="permission__access_coarse_location">Access Coarse Location</string>
    <string name="permission__record_audio">Record Audio</string>
    <string name="permission__read_phone_state">Read Phone State</string>
    <string name="permission__call_phone">Call Phone</string>
    <string name="permission__read_call_log">Read Call Log</string>
    <string name="permission__write_call_log">Write Call Log</string>
    <string name="permission__add_voicemail">Add VoiceMail</string>
    <string name="permission__use_sip">Use SIP</string>
    <string name="permission__body_sensors">Body Sensors</string>
    <string name="permission__send_sms">Send SMS</string>
    <string name="permission__receive_sms">Receive SMS</string>
    <string name="permission__read_sms">Read SMS</string>
    <string name="permission__receive_wap_push">Receive Wap Push</string>
    <string name="permission__receive_mms">Receive MMS</string>
    <string name="permission__read_external_storage">Read External Storage</string>
    <string name="permission__write_external_storage">Write External Storage</string>
    <string name="permission__restarting_accessibility">Restarting Accessibility Service…s</string>
    <string name="permission__kill_app">Kill App: %s</string>
    <string name="permission__open_accessibility">Starting Accessibility Service</string>
    <string name="permission__try_kil_uiautomator">Try to kill uiautomator and instrument processes</string>
    <string name="permission__force_stop">Force stop</string>
    <string name="ime__click_to_input">Click to input</string>
    <string name="ime__click_change">Change IME</string>
</resources>
