<!--
  ~ Copyright (C) 2015-present, Ant Financial Services Group
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ 	http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="280dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission__request_permission"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:textColor="#212121"/>
        <TextView
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/permission_success"
            android:textStyle="bold"
            android:textColor="#FF4081"
            android:textSize="18dp"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission__splash"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:textColor="#212121"/>

        <TextView
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/permission_all"
            android:textColor="#212121"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:textSize="18dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission__right_parentheses"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:textColor="#212121"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ProgressBar
            android:id="@+id/permission_loading_progress"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="8dp"
            style="@style/Widget.AppCompat.ProgressBar"
            android:indeterminateTint="#FF4081"
            android:visibility="visible"/>
        <TextView
            android:id="@+id/permission_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:textColor="#757575"
            android:layout_gravity="center_vertical"
            android:textSize="16dp"
            android:text="@string/permission_default"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/permission_action_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:layout_marginRight="8dp"
        android:visibility="visible">
        <LinearLayout
            android:id="@+id/permission_third_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            android:paddingTop="8dp"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:foreground="?attr/selectableItemBackground"
            android:layout_marginRight="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/constant__cancel"
                android:textColor="#FF4081"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/permission_negative_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:foreground="?attr/selectableItemBackground"
            android:layout_marginRight="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/constant__cancel"
                android:textColor="#FF4081"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/permission_positive_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:foreground="?attr/selectableItemBackground">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/constant__confirm"
                android:textColor="#FF4081"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>