<!--
  ~ Copyright (C) 2015-present, Ant Financial Services Group
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ 	http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="@dimen/float_win_width">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <LinearLayout
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/file_choose_upper"
            android:paddingLeft="@dimen/control_dp8"
            android:paddingRight="@dimen/control_dp8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="@dimen/control_dp32"
                android:layout_height="@dimen/control_dp32"
                android:src="@drawable/file_choose_upper_dir"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_margin="@dimen/control_dp8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/file_choose_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_choose__select_dir"
                android:textSize="@dimen/textsize_18"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:textColor="#212121"/>

            <TextView
                android:id="@+id/file_choose_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_16"
                android:textColor="#757575"/>
        </LinearLayout>

        <LinearLayout
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/file_choose_create"
            android:paddingRight="@dimen/control_dp8"
            android:paddingLeft="@dimen/control_dp8"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="@dimen/control_dp32"
                android:layout_height="@dimen/control_dp32"
                android:src="@drawable/file_choose_create"
                />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#FFCCCCCC"
        />

    <ListView
        android:id="@+id/file_choose_list"
        android:layout_width="wrap_content"
        tools:listitem="@layout/file_item_layout"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#FFCCCCCC"
        />
    <LinearLayout
        android:id="@+id/permission_action_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:paddingTop="@dimen/control_dp12"
        android:paddingBottom="@dimen/control_dp12"
        android:paddingRight="@dimen/control_dp8"
        android:visibility="visible">
        <LinearLayout
            android:id="@+id/file_choose_negative_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/control_dp16"
            android:paddingRight="@dimen/control_dp16"
            android:paddingTop="@dimen/control_dp8"
            android:gravity="center"
            android:paddingBottom="@dimen/control_dp8"
            android:foreground="?attr/selectableItemBackground"
            android:layout_marginRight="@dimen/control_dp8">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_14"
                android:text="@string/constant__cancel"
                android:textColor="#FF4081"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/file_choose_positive_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/control_dp16"
            android:paddingRight="@dimen/control_dp16"
            android:paddingTop="@dimen/control_dp8"
            android:gravity="center"
            android:paddingBottom="@dimen/control_dp8"
            android:foreground="?attr/selectableItemBackground">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/constant__confirm"
                android:textSize="@dimen/textsize_14"
                android:textColor="#FF4081"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>